--- a/upgradelibrary/src/main/res/layout/dialog_upgrade_head_bar.xml
+++ b/upgradelibrary/src/main/res/layout/dialog_upgrade_head_bar.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_dialog_upgrade_head"
     android:orientation="vertical">
 
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
         android:id="@+id/tv_dialog_upgrade_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
         android:textSize="20sp"
         android:textStyle="normal" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
         android:id="@+id/tv_dialog_upgrade_date"
         style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="wrap_content"
@@ -31,7 +31,7 @@
         android:textSize="14sp"
         android:textStyle="normal" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
         android:id="@+id/tv_dialog_upgrade_version"
         style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="wrap_content"
@@ -45,4 +45,4 @@
         android:textSize="14sp"
         android:textStyle="normal" />
 
-</android.support.v7.widget.LinearLayoutCompat>
+</LinearLayout>
