--- a/upgradelibrary/src/main/res/drawable/bg_dialog_upgrade_head.xml
+++ b/upgradelibrary/src/main/res/drawable/bg_dialog_upgrade_head.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/pinka200" />
+    <solid android:color="@color/dialog_upgrade_accent_color" />
     <corners
         android:topLeftRadius="@dimen/dialog_upgrade_corner_radius"
         android:topRightRadius="@dimen/dialog_upgrade_corner_radius" />
