--- a/upgradelibrary/src/main/res/layout/dialog_upgrade.xml
+++ b/upgradelibrary/src/main/res/layout/dialog_upgrade.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -20,4 +20,4 @@
 
     </FrameLayout>
 
-</LinearLayout>
+</android.support.v7.widget.LinearLayoutCompat>
