--- a/upgradelibrary/src/main/res/layout/dialog_upgrade_body.xml
+++ b/upgradelibrary/src/main/res/layout/dialog_upgrade_body.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scrollbars="vertical">
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_dialog_upgrade_logs"
         style="@style/TextAppearance.AppCompat.Body1"
         android:layout_width="wrap_content"
@@ -17,11 +17,11 @@
         android:paddingTop="8dp"
         android:scrollbars="vertical"
         android:text="@string/dialog_upgrade_message"
-        android:textColor="@color/grey900"
+        android:textColor="@color/dialog_upgrade_text_dark_color"
         android:textSize="@dimen/dialog_upgrade_message_font_size"
         android:textStyle="normal" />
 
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
 
 
 
