--- a/upgradelibrary/src/main/res/layout/dialog_upgrade_head_bar.xml
+++ b/upgradelibrary/src/main/res/layout/dialog_upgrade_head_bar.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_dialog_upgrade_head"
     android:orientation="vertical">
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_dialog_upgrade_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,11 +14,11 @@
         android:layout_marginRight="24dp"
         android:layout_marginTop="16dp"
         android:text="@string/dialog_upgrade_title"
-        android:textColor="@color/grey1000"
+        android:textColor="@color/dialog_upgrade_text_light_color"
         android:textSize="20sp"
         android:textStyle="normal" />
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_dialog_upgrade_date"
         style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="wrap_content"
@@ -27,11 +27,11 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:text="@string/dialog_upgrade_date"
-        android:textColor="@color/grey1000"
+        android:textColor="@color/dialog_upgrade_text_light_color"
         android:textSize="14sp"
         android:textStyle="normal" />
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_dialog_upgrade_version"
         style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="wrap_content"
@@ -41,8 +41,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:text="@string/dialog_upgrade_versions"
-        android:textColor="@color/grey1000"
+        android:textColor="@color/dialog_upgrade_text_light_color"
         android:textSize="14sp"
         android:textStyle="normal" />
 
-</LinearLayout>
+</android.support.v7.widget.LinearLayoutCompat>
