--- a/upgradelibrary/src/main/res/values/colors.xml
+++ b/upgradelibrary/src/main/res/values/colors.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <color name="dialog_upgrade_button_light_color">#FFFF4081</color>
+    <color name="dialog_upgrade_background_color">#FFFFFF</color>
+    <color name="dialog_upgrade_accent_color">#6889ff</color>
+    <color name="dialog_upgrade_text_light_color">#FFFFFF</color>
+    <color name="dialog_upgrade_text_dark_color">#222222</color>
+    <color name="dialog_upgrade_button_light_color">@color/dialog_upgrade_accent_color</color>
     <color name="dialog_upgrade_button_dark_color">#FF757575</color>
     <color name="dialog_upgrade_button_selected">#33969696</color>
-
-    <color name="pinka200">#FF4081</color>
-    <color name="grey600">#757575</color>
-    <color name="grey900">#212121</color>
-    <color name="grey1000">#FFFFFF</color>
 </resources>
