--- a/upgradelibrary/src/main/res/values/dimens.xml
+++ b/upgradelibrary/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="dialog_upgrade_corner_radius">2dp</dimen>
     <dimen name="dialog_upgrade_message_font_size">16sp</dimen>
     <dimen name="dialog_upgrade_button_textsize">14sp</dimen>
+    <dimen name="dialog_upgrade_progress_textsize">10sp</dimen>
 </resources>
