--- a/upgradelibrary/src/main/res/layout/dialog_upgrade_head_bar.xml
+++ b/upgradelibrary/src/main/res/layout/dialog_upgrade_head_bar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_dialog_upgrade_head_bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_dialog_upgrade_head"
