--- a/upgradelibrary/src/main/res/layout/dialog_upgrade_progress.xml
+++ b/upgradelibrary/src/main/res/layout/dialog_upgrade_progress.xml
@@ -5,7 +5,7 @@
     android:layout_height="56dp"
     android:orientation="vertical">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
