--- a/upgradelibrary/src/main/res/xml/file_paths.xml
+++ b/upgradelibrary/src/main/res/xml/file_paths.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
+    <!-- /storage/emulated/0/xxx/com.xxx.xxx/.beta/apk-->
+    <external-path
+        name="beta_external_root_path"
+        path="Download/" />
     <!-- /storage/emulated/0/Download/com.xxx.xxx/.beta/apk-->
     <external-path
-        name="beta_external_path"
+        name="beta_external_download_path"
         path="Download/" />
     <!--/storage/emulated/0/Android/model/com.xxx.xxx/files/apk/-->
     <external-path
