--- a/upgradelibrary/src/main/res/layout/dialog_upgrade_body.xml
+++ b/upgradelibrary/src/main/res/layout/dialog_upgrade_body.xml
@@ -11,10 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="24dp"
+        android:layout_marginBottom="8dp"
         android:lineSpacingMultiplier="1.2"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp"
         android:scrollbars="vertical"
         android:text="@string/dialog_upgrade_message"
         android:textColor="@color/dialog_upgrade_text_dark_color"
