--- a/upgradelibrary/src/main/res/xml/file_paths.xml
+++ b/upgradelibrary/src/main/res/xml/file_paths.xml
@@ -3,13 +3,15 @@
     <!-- /storage/emulated/0/xxx/com.xxx.xxx/.beta/apk-->
     <external-path
         name="beta_external_root_path"
-        path="Download/" />
+        path="." />
+
     <!-- /storage/emulated/0/Download/com.xxx.xxx/.beta/apk-->
     <external-path
         name="beta_external_download_path"
         path="Download/" />
-    <!--/storage/emulated/0/Android/model/com.xxx.xxx/files/apk/-->
+
+    <!--/storage/emulated/0/Android/object/com.xxx.xxx/files/apk/-->
     <external-path
         name="beta_external_files_path"
-        path="Android/data/" />
+        path="Android/object/" />
 </paths>
