--- a/app/src/main/res/drawable/btn_upgrade.xml
+++ b/app/src/main/res/drawable/btn_upgrade.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#8AE94339" />
+        </shape>
+    </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#E94339" />
+            <solid android:color="#FFE94339" />
         </shape>
     </item>
 </selector>
