--- a/upgradelibrary/src/main/res/xml/file_paths.xml
+++ b/upgradelibrary/src/main/res/xml/file_paths.xml
@@ -10,8 +10,8 @@
         name="beta_external_download_path"
         path="Download/" />
 
-    <!--/storage/emulated/0/Android/object/com.xxx.xxx/files/apk/-->
+    <!--/storage/emulated/0/Android/data/com.xxx.xxx/files/apk/-->
     <external-path
         name="beta_external_files_path"
-        path="Android/object/" />
+        path="Android/data/" />
 </paths>
