--- a/upgradelibrary/src/main/res/values/styles.xml
+++ b/upgradelibrary/src/main/res/values/styles.xml
@@ -11,8 +11,8 @@
         <item name="android:backgroundDimEnabled">true</item>
     </style>
 
-    <!--AppTheme.Dialog.ActionButton.Text-->
-    <style name="AppTheme.Dialog.ActionButton.Text" parent="TextAppearance.AppCompat.Button">
+    <!--AppTheme.Dialog.ActionButton-->
+    <style name="AppTheme.Dialog.ActionButton" parent="TextAppearance.AppCompat.Button">
         <item name="android:textSize">@dimen/dialog_upgrade_button_text_size</item>
         <item name="android:singleLine">true</item>
         <item name="android:layout_gravity">center_vertical</item>
