--- a/upgradelibrary/src/main/res/layout/dialog_upgrade_done_button.xml
+++ b/upgradelibrary/src/main/res/layout/dialog_upgrade_done_button.xml
@@ -8,7 +8,7 @@
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_dialog_upgrade_neutral"
-        style="@style/AppTheme.Dialog.ActionButton.Text"
+        style="@style/AppTheme.Dialog.ActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -17,7 +17,7 @@
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_dialog_upgrade_positive"
-        style="@style/AppTheme.Dialog.ActionButton.Text"
+        style="@style/AppTheme.Dialog.ActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -27,7 +27,7 @@
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_dialog_upgrade_negative"
-        style="@style/AppTheme.Dialog.ActionButton.Text"
+        style="@style/AppTheme.Dialog.ActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
