--- a/upgradelibrary/src/main/res/layout/dialog_upgrade_body.xml
+++ b/upgradelibrary/src/main/res/layout/dialog_upgrade_body.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scrollbars="vertical">
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_dialog_upgrade_logs"
         style="@style/TextAppearance.AppCompat.Body1"
         android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
         android:textSize="@dimen/dialog_upgrade_message_font_size"
         android:textStyle="normal" />
 
-</android.support.v4.widget.NestedScrollView>
+</androidx.core.widget.NestedScrollView>
 
 
 
