--- a/upgradelibrary/src/main/res/layout/dialog_upgrade_done_button.xml
+++ b/upgradelibrary/src/main/res/layout/dialog_upgrade_done_button.xml
@@ -6,7 +6,7 @@
     android:minHeight="56dp"
     android:paddingBottom="8dp">
 
-    <android.support.v7.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_dialog_upgrade_neutral"
         style="@style/AppTheme.Dialog.ActionButton"
         android:layout_width="wrap_content"
@@ -15,7 +15,7 @@
         android:layout_marginStart="16dp"
         android:text="@string/dialog_upgrade_btn_neutral" />
 
-    <android.support.v7.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_dialog_upgrade_positive"
         style="@style/AppTheme.Dialog.ActionButton"
         android:layout_width="wrap_content"
@@ -25,7 +25,7 @@
         android:text="@string/dialog_upgrade_btn_positive"
         android:textColor="@color/dialog_upgrade_button_light_color" />
 
-    <android.support.v7.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_dialog_upgrade_negative"
         style="@style/AppTheme.Dialog.ActionButton"
         android:layout_width="wrap_content"
