--- a/upgradelibrary/src/main/res/layout/dialog_upgrade_head_bar.xml
+++ b/upgradelibrary/src/main/res/layout/dialog_upgrade_head_bar.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_dialog_upgrade_head_bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_dialog_upgrade_head"
     android:orientation="vertical">
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_dialog_upgrade_title"
         style="@style/TextAppearance.AppCompat.Title"
         android:layout_width="wrap_content"
@@ -20,7 +20,7 @@
         android:textSize="20sp"
         android:textStyle="normal" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_dialog_upgrade_date"
         style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="wrap_content"
@@ -32,7 +32,7 @@
         android:textSize="14sp"
         android:textStyle="normal" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_dialog_upgrade_version"
         style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="wrap_content"
@@ -45,4 +45,4 @@
         android:textSize="14sp"
         android:textStyle="normal" />
 
-</android.support.v7.widget.LinearLayoutCompat>
+</androidx.appcompat.widget.LinearLayoutCompat>
