--- a/upgradelibrary/src/main/res/drawable/btn_dialog_upgrade_button_selected.xml
+++ b/upgradelibrary/src/main/res/drawable/btn_dialog_upgrade_button_selected.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
-    android:insetBottom="6dp"
-    android:insetTop="6dp">
+    android:insetTop="6dp"
+    android:insetBottom="6dp">
     <shape android:shape="rectangle">
         <corners android:radius="2dp" />
         <solid android:color="@color/dialog_upgrade_button_selected" />
